# simple-rpg

./: .gitignore  CMakeCache.txt  CMakeLists.txt  ideas.txt
data/map/: level2.json  level2.tmx
src/: Minesweeper.h  camera.cpp  camera.h  coin.cpp  coin.h  defs.h  entity.cpp  entity.h  entitymanager.cpp  entitymanager.h  graphicsmanager.cpp  graphicsmanager.h  inputmanager.cpp  inputmanager.h  main.cpp  map.cpp  map.h  mapload.cpp  player.cpp  player.h  weapon.cpp  weapon.h
src/state/: maingame.cpp  maingame.h
